# gnome-dot-installer

./: README.md
dotInstaller/: APPIMAGE_IMPROVEMENTS.md  README_APPIMAGES.md  debug_appimage.py  dotInstaller.py  fix_appimages.py  fix_specific_appimages.py  fix_subway.desktop  pyproject.toml  quick_diagnosis.py  requirements.txt  setup.py  test_appimage.py  test_appimage_execution.py  test_appimage_final.py  test_appimage_improved.py  validate_appimage_dependencies.py
dotInstaller/resources/: material.css
dotInstaller/src/core/: installer.py
dotInstaller/src/data/: database.py
dotInstaller/src/handlers/: appimage_handler.py  deb_handler.py  proton_handler.py  script_handler.py  wine_handler.py
dotInstaller/src/ui/: animation_helper.py  main_window.py  sidebar.py
dotInstaller/src/ui/panels/: library_panel.py  manual_panel.py  settings_panel.py  store_panel.py
dotInstaller/src/utils/: package_listing.py
